--- a/application/clients/desktop/src/app/navigation/header/header.component.html
+++ b/application/clients/desktop/src/app/navigation/header/header.component.html
@@ -10,10 +10,10 @@
   <div fxFlex fxLayout fxLayoutAlign="end" fxHide.xs>
     <ul fxLayout fxLayoutGap="15px" class="navigation-items">
       <li>
-        <a [routerLink]="['/project']">Project</a>
+        <a [routerLink]="['/project']">{{'project' | i18next}}</a>
       </li>
       <li>
-        <a routerLink="/flow-manager">Flow Manager</a>
+        <a routerLink="/flow-manager">{{'flowManager' | i18next}}</a>
       </li>
     </ul>
   </div>
