--- a/application/clients/desktop/src/app/projects/projects.component.html
+++ b/application/clients/desktop/src/app/projects/projects.component.html
@@ -17,11 +17,11 @@
           <div class="card">
             <div class="card-header">{{proj.name}}</div>
             <div class="card-body">
-              <div><span>{{proj.description}}</span></div>
-              <button type="button" [routerLink]="['/desktopscreen']"
-                class="btn btn-primary btn-space pull-right">Edit</button>
-              <button type="button" (click)="openDeleteModel(proj)"
-                class="btn btn-danger btn-space pull-right">Delete</button>
+              <div><span>{{proj.description}}</span>
+                </div>
+                <button type="button" class="btn btn-primary btn-space" (click)="openGeneratorModal()">Genrator</button>
+              <button type="button" [routerLink]="['/desktopscreen']" class="btn btn-primary btn-space pull-right">Edit</button>
+              <button type="button" (click)="openDeleteModel(proj)" class="btn btn-danger btn-space pull-right">Delete</button>
             </div>
           </div>
         </div>
@@ -79,9 +79,8 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="app-context">{{ 'app_context' | i18next }}</label>
-                <input type="text" class="form-control" placeholder="{{'placeholder_appContext' | i18next}}"
-                  id="app-context" formControlName="appContext"
-                  [ngClass]="{ 'is-invalid': submitted && form_control.appContext.errors }">
+                <input type="text" class="form-control" placeholder="{{'placeholder_appContext' | i18next}}" id="app-context"
+                  formControlName="appContext" [ngClass]="{ 'is-invalid': submitted && form_control.appContext.errors }">
                 <div *ngIf="submitted && form_control.appContext.errors" class="invalid-feedback">
                   <div *ngIf="form_control.appContext.errors.required">{{'require_appContext' | i18next}}</div>
                 </div>
@@ -91,9 +90,8 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="description">{{ 'description' | i18next }}</label>
-                <textarea class="form-control" rows="1" id="description"
-                  placeholder="{{'placeholder_description' | i18next}}" formControlName="description"
-                  [ngClass]="{ 'is-invalid': submitted && form_control.description.errors }"></textarea>
+                <textarea class="form-control" rows="1" id="description" placeholder="{{'placeholder_description' | i18next}}"
+                  formControlName="description" [ngClass]="{ 'is-invalid': submitted && form_control.description.errors }"></textarea>
                 <div *ngIf="submitted && form_control.description.errors" class="invalid-feedback">
                   <div *ngIf="form_control.description.errors.required">{{'require_description' | i18next}}</div>
                 </div>
@@ -105,8 +103,7 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="primary-language">{{ 'primary_language' | i18next }}</label>
-                <select class="form-control" id="primary-language" formControlName="primaryLanguage"
-                  [ngClass]="{ 'is-invalid': submitted && form_control.primaryLanguage.errors }">
+                <select class="form-control" id="primary-language" formControlName="primaryLanguage" [ngClass]="{ 'is-invalid': submitted && form_control.primaryLanguage.errors }">
                   <option value="" selected>{{'select_primary' | i18next}}</option>
                   <option value="english">English</option>
                   <option value="tamil">Tamil</option>
@@ -122,8 +119,7 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="secondary-language">{{ 'secondary_language' | i18next }}</label>
-                <select class="form-control" id="secondary-language" formControlName="secondaryLanguage"
-                  [ngClass]="{ 'is-invalid': submitted && form_control.secondaryLanguage.errors }">
+                <select class="form-control" id="secondary-language" formControlName="secondaryLanguage" [ngClass]="{ 'is-invalid': submitted && form_control.secondaryLanguage.errors }">
                   <option value="" selected>{{'select_secondary' | i18next}}</option>
                   <option *ngFor="let c of languages" [ngValue]="c">{{ c }}</option>
                 </select>
@@ -164,3 +160,22 @@
 
   </div>
 </div>
+
+
+<div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'top': '100px','display':displayGenratorModel}">
+    <div class="modal-dialog modal-sm" role="dialog">
+      <div class="modal-content">
+        <!-- <div class="modal-header">
+          <h6 class="modal-title">Delete</h6>
+          <button type="button" class="close">&times;</button>
+        </div> -->
+        <div class="modal-body">
+          <p>Generating </p>
+        </div>
+        <div class="modal-footer" style="padding: 5px">
+           <button type="button" (click)="onCloseHandledGen()" class="btn btn-default">{{ 'cancel' | i18next }}</button>
+        </div>
+      </div>
+  
+    </div>
+  </div>
