--- a/application/clients/desktop/src/app/navigation/header/header.component.scss
+++ b/application/clients/desktop/src/app/navigation/header/header.component.scss
@@ -26,6 +26,10 @@ mat-toolbar{
 .mat-toolbar.mat-primary{
     background: grey;
 }
+
+.dropdown-item {
+    color: black;
+}
  
 @media(max-width: 959px){
     mat-toolbar{
