--- a/application/clients/desktop/src/app/component-flows/component-flows.component.html
+++ b/application/clients/desktop/src/app/component-flows/component-flows.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container">
   <h1 style="text-align: center;"> <u>{{ 'flowComponents' | i18next }}</u> </h1>
   <div class="row row-button">
     <button mat-raised-button color="primary" (click)="openAddModal('create')">{{ 'create' | i18next }}</button>
@@ -12,7 +12,20 @@
   </div>
 
 
-  <h1 style="text-align: center;" *ngIf="selectedFlow[0]?.connector"> <u>{{ 'availableConnectors' | i18next }}</u> </h1>
+  <h1 class="flowTable" style="text-align: center;" *ngIf="selectedFlow[0]?.connector"> <u>{{ 'defaultConnectors' | i18next }}</u> </h1>
+  <!-- <div class="row row-button" *ngIf="selectedFlow[0]?.connector">
+    <button mat-raised-button color="primary" (click)="openAddConnectorModal('create')">{{ 'create' | i18next }}</button>
+    <button mat-raised-button (click)="openAddConnectorModal('update')">{{ 'update' | i18next }}</button>
+    <button mat-raised-button color="warn" (click)="deleteConnector()">{{ 'delete' | i18next }}</button>
+  </div> -->
+  <div *ngIf="selectedFlow[0]?.connector">
+    <ag-grid-angular #agGrid3 style=" width: 100%; height: 100%;" id="myGrid" [defaultColDef]="defaultColDef"
+      (selectionChanged)="onSelectionLinkedConnectorChange()" [animateRows]="true" class="ag-theme-balham"
+      [columnDefs]="linkedConnectorColDef" [rowData]="[linkedConnectorData]" (gridReady)="onGridLinkedConnectorReady($event)">
+    </ag-grid-angular>
+  </div>
+
+  <h1 class="flowTable" style="text-align: center;" *ngIf="selectedFlow[0]?.connector"> <u>{{ 'availableConnectors' | i18next }}</u> </h1>
   <div class="row row-button" *ngIf="selectedFlow[0]?.connector">
     <button mat-raised-button color="primary" (click)="openAddConnectorModal('create')">{{ 'create' | i18next }}</button>
     <button mat-raised-button (click)="openAddConnectorModal('update')">{{ 'update' | i18next }}</button>
@@ -25,48 +38,7 @@
     </ag-grid-angular>
   </div>
 
-  <h1 style="text-align: center;" *ngIf="selectedFlow[0]?.connector"> <u>{{ 'defaultConnectors' | i18next }}</u> </h1>
-  <div class="row row-button" *ngIf="selectedFlow[0]?.connector">
-    <button mat-raised-button color="primary" (click)="openAddConnectorModal('create')">{{ 'create' | i18next }}</button>
-    <button mat-raised-button (click)="openAddConnectorModal('update')">{{ 'update' | i18next }}</button>
-    <button mat-raised-button color="warn" (click)="deleteConnector()">{{ 'delete' | i18next }}</button>
-  </div>
-  <div class="flowTable" *ngIf="selectedFlow[0]?.connector">
-    <ag-grid-angular #agGrid style=" width: 100%; height: 100%;" id="myGrid" [defaultColDef]="defaultColDef"
-      (selectionChanged)="onSelectionLinkedConnectorChange()" [rowSelection]="rowSelection" [animateRows]="true" class="ag-theme-balham"
-      [columnDefs]="linkedConnectorColDef" [rowData]="linkedConnectorData" (gridReady)="onGridLinkedConnectorReady($event)">
-    </ag-grid-angular>
-  </div>
-  <!-- <div>
-      <table class="table table-striped table-bordered">
-          <thead>
-              <tr>
-                  <th>Key</th>
-                  <th>value</th>
-              </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let field of fieldArray; let i = index">
-              <td>
-                {{}}
-                <input class="form-control" id="url" placeholder="Enter URL" name="key-{{i}}" [(ngModel)]="field.key">
-              </td>
-              <td>
-                <input class="form-control" id="url" placeholder="Enter URL" name="value-{{i}}" [(ngModel)]="field.value">
-              </td>
-
-              <td>
-                <button class="btn btn-default" type="button" (click)="deleteFieldValue(i)">Delete</button>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-  </div> -->
-  <!-- <div class="flowTable" *ngIf="selectedFlow[0]?.connector">
-    
-  </div> -->
-
-  <div *ngIf="showMicroFlow">
+  <div class="flowTable" *ngIf="showMicroFlow">
     <h1 style="text-align: center;"> <u>{{'microFlows'|i18next}}</u> </h1>
     <div class="row row-button">
       <button mat-raised-button color="primary" (click)="openAddMFModal('create')">{{ 'create' | i18next }}</button>
