added entity manager

--- a/application/clients/desktop/src/app/entity-manager/entity-manager.component.html
+++ b/application/clients/desktop/src/app/entity-manager/entity-manager.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <br/>
   <div>
-    <button class="createEntityButton goToButton" mat-raised-button  [routerLink]="['/desktopscreen']">Go To Screen Designer</button>
+    <button class="createEntityButton goToButton" mat-raised-button  (click)="GoToDesigner()">Go To Screen Designer</button>
   </div>
   <br/>
 <br/>
