project generate notification added

--- a/application/clients/desktop/src/app/projects/projects.component.html
+++ b/application/clients/desktop/src/app/projects/projects.component.html
@@ -18,7 +18,7 @@
             <div class="card-header">{{proj.name}}</div>
             <div class="card-body">
               <div><span>{{proj.description}}</span></div>
-              <button type="button" (click)="openGeneratorModal()" class="btn btn-primary btn-space">Genrator</button>
+              <button type="button" (click)="generateProject(proj)" class="btn btn-primary btn-space">Genrator</button>
               <button type="button" (click)="editProject(proj)" class="btn btn-primary btn-space pull-right">Edit</button>
               <button type="button" (click)="openDeleteModel(proj)" class="btn btn-danger btn-space pull-right">Delete</button>
             </div>
