--- a/application/clients/desktop/src/app/entity-manager/entity-manager.component.html
+++ b/application/clients/desktop/src/app/entity-manager/entity-manager.component.html
@@ -1,31 +1,40 @@
 <div class="container">
-  <br/>
+  <br />
   <div>
-    <button class="createEntityButton goToButton" mat-raised-button  (click)="GoToDesigner()">Go To Screen Designer</button>
+    <button class="createEntityButton goToButton" mat-raised-button (click)="GoToDesigner()">Go To Screen Designer</button>
   </div>
-  <br/>
-<br/>
+  <br />
+  <br />
   <div>
     <mat-accordion>
       <mat-expansion-panel [expanded]="true">
+        <mat-expansion-panel-header>
+          <mat-panel-title> My Application Features </mat-panel-title>
+        </mat-expansion-panel-header>
+        <div style="padding-right: 20px;">
+          <button class="createEntityButton" mat-raised-button color="primary" (click)="openFeatureDialog()">Create
+            Features</button>
+        </div>
+      </mat-expansion-panel>
+      <mat-expansion-panel>
         <mat-expansion-panel-header>
           <mat-panel-title>
             My Entity
           </mat-panel-title>
         </mat-expansion-panel-header>
         <div style="padding-right: 20px;">
-            <button class="createEntityButton" mat-raised-button color="primary" (click)="openDialog()">Create Entity</button>
-          </div>
+          <button class="createEntityButton" mat-raised-button color="primary" (click)="openDialog()">Create Entity</button>
+        </div>
         <div class="row" style="margin: 0px;">
           <div class="col-md-4" *ngFor="let entity of allEntity; let i = index">
             <div class="card">
               <div class="card-header">{{entity.name}}</div>
               <div class="card-body">
                 <div><span>{{entity.description}}</span></div>
-                <br/>
+                <br />
                 <button mat-raised-button color="primary" (click)="editEntityField(entity)">Edit</button>
                 &nbsp;
-                <button mat-raised-button color="warn"  (click)="openDeleteModel(entity)">Delete</button>
+                <button mat-raised-button color="warn" (click)="openDeleteModel(entity)">Delete</button>
               </div>
             </div>
           </div>
@@ -79,9 +88,63 @@
         <p>Please click confirm to delete this project ? </p>
       </div>
       <div class="modal-footer" style="padding: 5px">
-        <button type="button" class="btn btn-default"  (click)="deleteEntity()">Confirm</button>
+        <button type="button" class="btn btn-default" (click)="deleteEntity()">Confirm</button>
         &nbsp;
         <button type="button" class="btn btn-default" (click)="closeDeleteModel()">Cancel</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+
+<div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'top': '100px','display':displayFeatureModel}">
+  <div class="modal-dialog modal-md" role="dialog">
+    <div class="modal-content">
+      <div class="modal-body">
+        <div class="container">
+          <h1>Create Feature</h1>
+          <div class="row">
+            <div class="radio mr-sm-4">
+              <label><input type="radio" name="selectFeature" [value]="false" (change)="onChangeRadio($event.target.value)" [(ngModel)]="selectFeature">Select From
+                Existing</label>
+            </div>
+            <div class="radio">
+              <label><input type="radio" name="selectFeature" (change)="onChangeRadio($event.target.value)" [value]="true" [(ngModel)]="selectFeature">Create New
+                Feature</label>
+            </div>
+          </div>
+          <div *ngIf="!selectFeature" class="dropdown mt-sm-2 mb-sm-2">
+            <div class="form-group">
+                <label for="sel1">Select From Existing:</label>
+                <select class="form-control" (change)="onChange($event.target.value)">
+                  <option *ngFor="let feature of existingFeature" value="{{feature.name}}"  ([ngModel])="selectedExistingFeature">{{feature.name}}</option>
+                </select>
+              </div>
+          </div>
+          <form #featurForm="ngForm">
+            <div class="form-group">
+              <label for="name">Name</label>
+              <input type="text" class="form-control" name="name" [(ngModel)]="features.name" #name="ngModel" [ngClass]="{ 'is-invalid': featurForm.submitted && name.invalid }"
+                required />
+              <div *ngIf="featurForm.submitted && name.invalid" class="invalid-feedback">
+                <div *ngIf="name.errors.required">Name is required</div>
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="description">Description</label>
+              <ckeditor [editor]="Editor" name="description" [(ngModel)]="features.description"></ckeditor>
+            </div>
+          </form>
+        </div>
+      </div>
+      <div class="modal-footer" style="padding: 5px" *ngIf="!selectFeature">
+          <button class="btn btn-primary" (click)="createFeature()">Create</button>
+          <button type="button" class="btn btn-default" (click)="closeFeatureExistingModel()">Cancel</button>
+        </div>
+      <div class="modal-footer" style="padding: 5px" *ngIf="selectFeature">
+        <button class="btn btn-primary" (click)="createFeature()">Create</button>
+        <button type="button" class="btn btn-default" (click)="closeFeatureCreateModel()">Cancel</button>
       </div>
     </div>
 
