--- a/application/clients/desktop/src/app/entity-manager/entity-field/entity-field.component.html
+++ b/application/clients/desktop/src/app/entity-manager/entity-field/entity-field.component.html
@@ -21,5 +21,6 @@
     <button mat-raised-button color="primary" (click)="updateField()" *ngIf="entity.field.length !== 0">Update</button>
     &nbsp;
     <button mat-raised-button color="warn" (click)="cancelField()">Cancel</button>
+    <!-- <button mat-raised-button color="warn" (click)="get()">get</button> -->
   </div>
 </div>
