--- a/application/clients/desktop/src/app/entity-manager/entity-field/entity-field.component.scss
+++ b/application/clients/desktop/src/app/entity-manager/entity-field/entity-field.component.scss
@@ -1,5 +1,6 @@
 .addRowButton {
-    background-color: #4CAF50; /* Green */
+    background-color: #4CAF50;
+    /* Green */
     border: none;
     color: white;
     // padding: 15px 32px;
@@ -10,14 +11,20 @@
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
-    -webkit-transition-duration: 0.4s; /* Safari */
+    -webkit-transition-duration: 0.4s;
+    /* Safari */
     transition-duration: 0.4s;
 }
 
 .addRowButton:hover {
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
 .bottomButtons {
     float: right;
 }
+
+// .modal-dialog {
+//     width: auto;
+//     max-width: 960px; // Optional, maximum width
+//   }
