Config manager api integrated

--- a/application/clients/desktop/src/app/config-manager/config-manager.component.html
+++ b/application/clients/desktop/src/app/config-manager/config-manager.component.html
@@ -18,8 +18,7 @@
     <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" class="ag-theme-balham" [columnDefs]="columnDefs"
       [rowSelection]="rowSelection" [rowData]="rowData" [pagination]="true" [paginationPageSize]="paginationPageSize"
       [paginationNumberFormatter]="paginationNumberFormatter" [animateRows]="true" [defaultColDef]="defaultColDef"
-      (cellDoubleClicked)="routeNextPage()" (selectionChanged)="onSelectionChanged($event)" [floatingFilter]="true"
-      (gridReady)="onGridReady($event)">
+      (selectionChanged)="onSelectionChanged()" [floatingFilter]="true" (gridReady)="onGridReady($event)">
     </ag-grid-angular>
   </div>
 </div>
@@ -28,14 +27,13 @@
   <div class="modal-dialog modal-lg" role="dialog">
     <div class="modal-content">
       <div class="container">
-        ccccccc
-        <!--   <form class="m-3" [formGroup]="createFlowForm">
+        <div class="m-3">
           <div class="row">
             <div class="col-md-6">
               <div class="form-group">
                 <label for="name">{{ 'name' | i18next }}</label>
-                <input type="text" class="form-control" placeholder="{{'placeholder_name' | i18next}}" id="name"
-                  formControlName="name" [(ngModel)]="flow.name" [ngClass]="{ 'is-invalid': submitted && form_control.name.errors }">
+                <input type="text" class="form-control" placeholder="{{'placeholder_name' | i18next}}" id="name" name="name"
+                  [(ngModel)]="configManager.name" [ngClass]="{ 'is-invalid': submitted && form_control.name.errors }">
                 <div *ngIf="submitted && form_control.name.errors" class="invalid-feedback">
                   <div *ngIf="form_control.name.errors.required">{{'require_name' | i18next}}</div>
                 </div>
@@ -45,8 +43,8 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="label">{{ 'label' | i18next }}</label>
-                <input type="text" class="form-control" placeholder="{{'placeholder_label' | i18next}}" id="label"
-                  formControlName="label" [(ngModel)]="flow.label" [ngClass]="{ 'is-invalid': submitted && form_control.label.errors }">
+                <input type="text" class="form-control" placeholder="{{'placeholder_label' | i18next}}" id="label" name="label"
+                  [(ngModel)]="configManager.label" [ngClass]="{ 'is-invalid': submitted && form_control.label.errors }">
                 <div *ngIf="submitted && form_control.label.errors" class="invalid-feedback">
                   <div *ngIf="form_control.label.errors.required">{{'require_label' | i18next}}</div>
                 </div>
@@ -59,7 +57,7 @@
               <div class="form-group">
                 <label for="description">{{ 'description' | i18next }}</label>
                 <textarea class="form-control" rows="1" id="description" placeholder="{{'placeholder_description' | i18next}}"
-                  formControlName="description" [(ngModel)]="flow.description" [ngClass]="{ 'is-invalid': submitted && form_control.description.errors }"></textarea>
+                  name="description" [(ngModel)]="configManager.description" [ngClass]="{ 'is-invalid': submitted && form_control.description.errors }"></textarea>
                 <div *ngIf="submitted && form_control.description.errors" class="invalid-feedback">
                   <div *ngIf="form_control.description.errors.required">{{'require_description' | i18next}}</div>
                 </div>
@@ -67,25 +65,49 @@
             </div>
             <div class="col-md-6">
               <div class="form-group">
-                <label for="action">{{ 'action' | i18next }}</label>
-                <input type="text" class="form-control" placeholder="enter your action" id="action" formControlName="action_on_data"
-                  [(ngModel)]="flow.action_on_data" [ngClass]="{ 'is-invalid': submitted && form_control.action_on_data.errors }">
-                <div *ngIf="submitted && form_control.action_on_data.errors" class="invalid-feedback">
-                  <div *ngIf="form_control.action_on_data.errors.required">should not be empty</div>
+                <label for="type">Type</label>
+                <input type="text" class="form-control" placeholder="Enter Type" id="type" name="type" [(ngModel)]="configManager.type"
+                  [ngClass]="{ 'is-invalid': submitted && form_control.type.errors }">
+                <div *ngIf="submitted && form_control.type.errors" class="invalid-feedback">
+                  <div *ngIf="form_control.type.errors.required">should not be empty</div>
                 </div>
               </div>
             </div>
           </div>
-        </form>-->
-      </div>
-      <div class="modal-footer">
-        <div class="form-group" *ngIf="checkUpdate">
-          <button type="button" class="btn button-create" (click)="createFlowModel()">{{ 'create' | i18next }}</button>
-          <button type="button" class="btn button-close" (click)="onCloseHandled()">{{ 'cancel' | i18next }}</button>
+
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="sub_type">Sub Type</label>
+                <input type="text" class="form-control" placeholder="Enter Sub Type" id="sub_type" name="sub_type"
+                  [(ngModel)]="configManager.sub_type" [ngClass]="{ 'is-invalid': submitted && form_control.sub_type.errors }">
+                <div *ngIf="submitted && form_control.sub_type.errors" class="invalid-feedback">
+                  <div *ngIf="form_control.sub_type.errors.required">{{'require_name' | i18next}}</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="value">Value</label>
+                <input type="text" class="form-control" placeholder="Enter Value" id="value" name="value" [(ngModel)]="configManager.value"
+                  [ngClass]="{ 'is-invalid': submitted && form_control.value.errors }">
+                <div *ngIf="submitted && form_control.value.errors" class="invalid-feedback">
+                  <div *ngIf="form_control.value.errors.required">{{'require_label' | i18next}}</div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="form-group" *ngIf="!checkUpdate">
-          <button type="button" class="btn button-create" (click)="updateFlowModel()">{{ 'update' | i18next }}</button>
-          <button type="button" class="btn button-close" (click)="onCloseHandled()">{{ 'cancel' | i18next }}</button>
+        <div class="modal-footer">
+          <div class="form-group" *ngIf="checkUpdate">
+            <button type="button" class="btn button-create" (click)="createConfig()">{{ 'create' | i18next }}</button>
+            <button type="button" class="btn button-close" (click)="onCloseHandled()">{{ 'cancel' | i18next }}</button>
+          </div>
+          <div class="form-group" *ngIf="!checkUpdate">
+            <button type="button" class="btn button-create" (click)="updateConfig()">{{ 'update' | i18next }}</button>
+            <button type="button" class="btn button-close" (click)="onCloseHandled()">{{ 'cancel' | i18next }}</button>
+          </div>
         </div>
       </div>
     </div>
