--- a/application/clients/desktop/src/app/entity-manager/entity-manager.component.html
+++ b/application/clients/desktop/src/app/entity-manager/entity-manager.component.html
@@ -12,7 +12,7 @@
           <mat-panel-title> My Application Features </mat-panel-title>
         </mat-expansion-panel-header>
         <div style="padding-right: 20px;">
-          <button class="createEntityButton" mat-raised-button color="primary" (click)="openFeatureDialog('create')">Create
+          <button class="createEntityButton" mat-raised-button color="primary" (click)="openFeatureDialog('create')">Add
             Features</button>
         </div>
         <div class="row" style="margin: 0px;" *ngIf="featureData.length > 0">
@@ -135,29 +135,31 @@
 </div>
 
 
-<div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'top': '100px','display':displayFeatureModel}">
-  <div class="modal-dialog modal-md" role="dialog">
+<div class="modal" tabindex="-1" data-keyboard="true" aria-hidden="true" data-backdrop="true" role="dialog" [ngStyle]="{'top': '100px','display':displayFeatureModel}">
+  <div class="modal-dialog modal-lg" role="dialog">
     <div class="modal-content">
       <div class="modal-body">
         <div class="container">
-          <h1>Create Feature</h1>
+          <h1>Add Feature</h1>
           <div class="row">
             <div class="radio mr-sm-4">
-              <label><input type="radio" name="selectFeature" [value]="false" (change)="onChangeRadio($event.target.value)" [(ngModel)]="selectFeature">Select From
-                Existing</label>
+              <label><input type="radio" name="selectFeature" [value]="false" (change)="onChangeRadio($event.target.value)"
+                  [(ngModel)]="selectFeature">Import
+                Existing Feature</label>
             </div>
             <div class="radio">
-              <label><input type="radio" name="selectFeature" (change)="onChangeRadio($event.target.value)" [value]="true" [(ngModel)]="selectFeature">Create New
+              <label><input type="radio" name="selectFeature" (change)="onChangeRadio($event.target.value)" [value]="true"
+                  [(ngModel)]="selectFeature">Add New
                 Feature</label>
             </div>
           </div>
           <div *ngIf="!selectFeature" class="dropdown mt-sm-2 mb-sm-2">
             <div class="form-group">
-                <label for="sel1">Select From Existing:</label>
-                <select class="form-control" (change)="onChange($event.target.value)">
-                  <option *ngFor="let feature of featureData" value="{{feature.name}}"  ([ngModel])="selectedExistingFeature">{{feature.name}}</option>
-                </select>
-              </div>
+              <label for="sel1">Import Existing Feature:</label>
+              <select class="form-control" (change)="onChange($event.target.value)">
+                <option *ngFor="let feature of featureData" value="{{feature.name}}" ([ngModel])="selectedExistingFeature">{{feature.name}}</option>
+              </select>
+            </div>
           </div>
           <form #featurForm="ngForm">
             <div class="form-group">
@@ -170,15 +172,16 @@
             </div>
             <div class="form-group">
               <label for="description">Description</label>
-              <ckeditor [editor]="Editor" name="description" [(ngModel)]="features.description"></ckeditor>
+              <ckeditor [editor]="Editor" name="description" id="editor" (ready)="onReady($event)" [(ngModel)]="features.description"></ckeditor>
+              <!--   use this inside ckeditor tag for image upload replace your api with uploadUrl [config]="{ ckfinder :{uploadUrl: 'https://your-organization-id.cke-cs.com/easyimage/upload/'}}" -->
             </div>
           </form>
         </div>
       </div>
       <div class="modal-footer" style="padding: 5px" *ngIf="!selectFeature">
-          <button class="btn btn-primary" (click)="createFeature()">Create</button>
-          <button type="button" class="btn btn-default" (click)="closeFeatureExistingModel()">Cancel</button>
-        </div>
+        <button class="btn btn-primary" (click)="createFeature()">Create</button>
+        <button type="button" class="btn btn-default" (click)="closeFeatureExistingModel()">Cancel</button>
+      </div>
       <div class="modal-footer" style="padding: 5px" *ngIf="selectFeature && !showUpdateFeature">
         <button class="btn btn-primary" (click)="createFeature()">Create</button>
         <button type="button" class="btn btn-default" (click)="closeFeatureCreateModel()">Cancel</button>
