--- a/application/clients/desktop/src/app/entity-manager/entity-manager.component.scss
+++ b/application/clients/desktop/src/app/entity-manager/entity-manager.component.scss
@@ -10,3 +10,14 @@
     background-color: green;
     color: white;
   }
+
+:host ::ng-deep .ck-editor__editable {
+    min-height: 200px !important;
+}
+.modal-dialog{
+  overflow-y: initial !important
+}
+.modal-body{
+  height: 400px;
+  overflow-y: auto;
+}
