Default entity added

--- a/application/clients/desktop/src/app/projects/projects.component.html
+++ b/application/clients/desktop/src/app/projects/projects.component.html
@@ -18,9 +18,9 @@
             <div class="card-header">{{proj.name}}</div>
             <div class="card-body">
               <div><span>{{proj.description}}</span></div>
-              <button type="button" (click)="generateProject(proj)" class="btn btn-primary btn-space">Genrator</button>
-              <button type="button" (click)="editProject(proj)" class="btn btn-primary btn-space pull-right">Edit</button>
-              <button type="button" (click)="openDeleteModel(proj)" class="btn btn-danger btn-space pull-right">Delete</button>
+              <button type="button" (click)="generateProject(proj)" class="btn btn-primary">Genrator</button>
+              <button type="button" (click)="openDeleteModel(proj)" class="btn btn-danger row-button delBtn">Delete</button>
+              <button type="button" (click)="editProject(proj)" class="btn btn-primary row-button">Edit</button>
             </div>
           </div>
         </div>
